--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- favicon -->
-    <link rel="shortcut icon" href="/image/logorebomini.png">
+    <link rel="shortcut icon" href="../image/logorebomini.png">
     <!-- css -->
     <link rel="stylesheet" href="../scss/style.css">
     <!-- titulo -->
